<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speed_report">测速报告</string>
    <string name="delay_time">时延</string>
    <string name="download_speed">下载速度</string>
    <string name="upload_speed">上传速度</string>
    <string name="how_fast">当前网速有多快:</string>
    <string name="cleanup_open_permissions">开启权限</string>
    <string name="cleanup_very_clean">非常干净</string>
    <string name="app_name">Wifi大掌柜</string>
    <string name="cleanup_stop_scanning">停止扫描</string>
    <string name="cleanup_scanning">正在扫描中</string>
    <string name="cleanup_click_to_cleanup">一键清理</string>
    <string name="cleanup_view_trash_details"><![CDATA[查看垃圾详情 >]]></string>
    <string name="cleanup_click_rescan">点此再次扫描</string>
    <string name="scenes_phone_boost">手机加速</string>
    <string name="scenes_release_room">释放空间可提速</string>
    <string name="scenes_release_now">立即加速</string>
    <string name="scenes_release_success">加速成功</string>
    <string name="scenes_ram_high">内存不足</string>
    <string name="scenes_memory_used_percentage">内存已占用%s</string>
    <string name="scenes_free_up_ram">手机内存加速</string>
    <string name="scenes_optimizing_storage_space">正在释放手机空间</string>
    <string name="scenes_clean_ads_boosting">清理广告加速</string>
    <string name="scenes_phone_boost_ing">手机加速中...</string>
    <string name="scenes_apps_running_background">大量应用占用手机内存</string>
    <string name="scenes_phone_run_slow">手机运行速度变慢</string>
    <string name="scenes_expect_10s">该过程预计需要10s</string>
    <string name="scenes_ing">%s中</string>
    <string name="scenes_x_finish">%s完成</string>
    <string name="scenes_x_memory_junk_clean">已为您清理%s内存垃圾</string>
    <string name="scenes_x_junk_flie_clean">清理了%s个垃圾文件</string>
    <string name="scenes_x_day_partner_with_you">%s已陪伴您%s天</string>
    <string name="scenes_faster_than_x_user">击败全国%s%%的WiFi用户!</string>
    <string name="scenes_historical_high">历史最高网速：%s%s/s</string>
    <string name="scenes_download_episode_time">下载一集电视剧大约需要%s</string>
    <string name="scenes_download_movie_time">下载一部电影大约需要%s</string>
    <string name="scenes_download_music_time">下载一首歌大约需要%s</string>
    <string name="scenes_more_than_day"><![CDATA[>1天]]></string>
    <string name="scenes_less_1s"><![CDATA[<1秒钟]]></string>
    <string name="scenes_x_sec">%d秒钟</string>
    <string name="scenes_x_min">%d分钟</string>
    <string name="scenes_x_hour">%d小时</string>
    <string name="scenes_x_day">%d天</string>
    <string name="scenes_wifi_speed_test">网络测速</string>
    <string name="scenes_inquiry_net_speed">看看网速快不快</string>
    <string name="scenes_test_now">立即测速</string>
    <string name="scenes_test_speed_finish">测速完成</string>
    <string name="scenes_wifi_testing">网络测速中...</string>
    <string name="scenes_testing_connect_latency">正在测试网络时延</string>
    <string name="scenes_testing_download">正在测试下载速度</string>
    <string name="scenes_testing_upload">正在测试上传速度</string>
    <string name="scenes_current_speed">当前速度</string>
    <string name="scenes_testing_latency">正在测试时延...</string>
    <string name="scenes_net_test_error_net_error">网络加速失败:网络异常</string>
    <string name="scenes_snail">蜗牛</string>
    <string name="scenes_bicycle">自行车</string>
    <string name="scenes_car">汽车</string>
    <string name="scenes_airplane">飞机</string>
    <string name="scenes_rocket">火箭</string>
    <string name="scenes_speed_like">相当于%s的速度</string>
    <string name="scenes_battery_saver">超级省电</string>
    <string name="scenes_power_consuming_batter">后台有耗电应用</string>
    <string name="scenes_optimizing_now">立即优化</string>
    <string name="scenes_optimizing_finish">优化完成</string>
    <string name="scenes_close_all_consuming_power_apps">已关闭所有耗电应用</string>
    <string name="scenes_consuming_power_1">有应用在后台偷偷耗电</string>
    <string name="scenes_consuming_power_2">偷偷耗电</string>
    <string name="scenes_background_apps_more">后台运行程序过多</string>
    <string name="scenes_power_consumption_fast">手机耗电过快</string>
    <string name="scenes_optimizing_battery">电池正在优化中...</string>
    <string name="scenes_analyzing_power_consumption">正在分析耗电应用</string>
    <string name="scenes_shutting_down_power_draining_apps">正在关闭耗电应用</string>
    <string name="scenes_releasing_storage_space">正在释放手机空间</string>
    <string name="scenes_cpu_cooler">手机降温</string>
    <string name="scenes_hot_effect_performance">发热会影响性能</string>
    <string name="scenes_temperature_high">温度过高</string>
    <string name="scenes_cooler_now">立即降温</string>
    <string name="scenes_cooler_down_success">降温成功</string>
    <string name="scenes_closed_all_cause_hot_apps">已关闭所有导致发热应用</string>
    <string name="scenes_cooler_text_1">温度过高将影响手机性能</string>
    <string name="scenes_cooler_text_1_key">手机性能</string>
    <string name="scenes_phone_temperature_high">手机温度过高</string>
    <string name="scenes_caton_boost">卡顿优化</string>
    <string name="scenes_caton_cache_slowing_down_your_phone">缓存垃圾正在拖慢手机速度</string>
    <string name="scenes_phone_cooling">手机正在降温中...</string>
    <string name="scenes_scanning_phone_hardware">正在扫描手机硬件</string>
    <string name="scenes_close_apps_cause_heat">关闭导致发热应用</string>
    <string name="scenes_phone_starts_cool_down">手机开始降温</string>
    <string name="scenes_unstall_clean">残留清理</string>
    <string name="scenes_tools_box">工具箱</string>
    <string name="scenes_to_tools_box">实用功能一键达</string>
    <string name="scenes_optimized_best">已优化到最佳</string>
    <string name="scenes_tools_weather">天气</string>
    <string name="scenes_tools_calendar">日历</string>
    <string name="scenes_tools_gprs_use">流量使用</string>
    <string name="scenes_tools_phone_parameters">手机参数</string>
    <string name="scenes_tools_flashlight">手电筒</string>
    <string name="scenes_tools_font">字体大小</string>
    <string name="scenes_tools_alarm_clock">闹钟</string>
    <string name="scenes_tools_photo">相册</string>
    <string name="scenes_tools_unknown">未知</string>
    <string name="scenes_camera_detection">摄像头检测</string>
    <string name="scenes_find_cameras">找出非法摄像头</string>
    <string name="scenes_check_now">立即检测</string>
    <string name="scenes_detection_completed">检测完成</string>
    <string name="scenes_camera_no_exception_found">未发现异常</string>
    <string name="scenes_camera_check_privacy_leaks">检查是否有隐私泄露风险</string>
    <string name="scenes_camera_privacy_leaks">隐私泄露</string>
    <string name="scenes_camera_network_wait_check">网络环境待检测</string>
    <string name="scenes_network_intrusion_need_check">网络入侵风险待检测</string>
    <string name="scenes_check_network_security_ing">正在检测网络环境安全</string>
    <string name="scenes_network_intrusion_discover">正在检测网络入侵风险</string>
    <string name="scenes_looking_camera">正在查找可疑摄像头</string>
    <string name="scenes_camera_detection_ing">摄像头检测中...</string>
    <string name="scenes_photo_cleaner">相册清理</string>
    <string name="scenes_organize_albums">定期来整理相册</string>
    <string name="scenes_organize_albums_1">定期整理相册释放空间</string>
    <string name="scenes_album_clean">立即清理</string>
    <string name="scenes_album_clean_finish">清理完成</string>
    <string name="scenes_junk_clean_now">立即清理</string>
    <string name="scenes_residual_clean">残留清理</string>
    <string name="scenes_clean_to_freeup_space">软件留下的残留文件</string>
    <string name="scenes_unloading_residual">卸载残留中...</string>
    <string name="scenes_scanning_for_junk_from_uninstalling_software">正在扫描卸载软件产生的垃圾</string>
    <string name="scenes_cleaning_up_image_junk_files">正在清理图片垃圾文件</string>
    <string name="scenes_click_to_clean">一键清理</string>
    <string name="scenes_app_manager">应用管理</string>
    <string name="scenes_too_many_applications">应用太多</string>
    <string name="scenes_view_now">立即查看</string>
    <string name="scenes_app_manage_completed">应用整理完成</string>
    <string name="scenes_app_manager_recommend_desc">清理不常用软件</string>
    <string name="scenes_app_optimized">已整理到最佳</string>
    <string name="scenes_rarely_used_apps_taking_up_storage_space">长时间未使用应用占用内存</string>
    <string name="scenes_haven_not_manage_your_apps_in_a_long_time">应用长时间未管理</string>
    <string name="scenes_leftover_junk_files_after_uninstallation">卸载软件时没有带走的垃圾</string>
    <string name="scenes_junk_files_produced_during_uninstallation">卸载软件产生的文件垃圾</string>
    <string name="scenes_junk_images_produced_during_uninstallation">卸载软件产生的图片垃圾</string>
    <string name="scenes_cleaning_junk_files">正在清理软件垃圾文件</string>
    <string name="scenes_optimized">已优化到最佳</string>
    <string name="scenes_manage_less_used_apps">管理长期未使用或大内存应用</string>
    <string name="scenes_clean_up_junk_and_keep_your_phone_smooth">清理垃圾 保持手机流畅</string>
    <string name="scenes_keep_your_phone_smooth">让手机保持流畅</string>
    <string name="scenes_one_click_optimization">一键优化</string>
    <string name="scenes_clean_up">清理完成</string>
    <string name="scenes_the_best_current_mobile_phone_optimization">当前手机优化最佳</string>
    <string name="scenes_slow_down">拖慢</string>
    <string name="scenes_too_many_programs_running_in_the_background">后台运行程序过多</string>
    <string name="scenes_severely_reduced_mobility">手机性严重降低</string>
    <string name="scenes_optimizing_phone_residue">正在优化手机残留</string>
    <string name="scenes_optimizing_phone_memory">正在优化手机内存</string>
    <string name="scenes_freeing_up_phone_space">正在释放手机空间</string>
    <string name="scenes_caton_optimization_in_progress">卡顿优化中...</string>
    <string name="scenes_signal_optimization">信号优化</string>
    <string name="scenes_analyze_signal_interference_factors">分析信号干扰因素</string>
    <string name="scenes_optimize_now">立即优化</string>
    <string name="scenes_optimization_completed">优化完成</string>
    <string name="scenes_signal_optimized_to_the_best">信号已优化到最佳</string>
    <string name="scenes_check_and_fix_problems_affecting_internet_access">检查修复影响上网的问题</string>
    <string name="scenes_the_network_needs_to_be_optimized">网络需优化</string>
    <string name="scenes_find_a_better_internet_connection">发现更优质的上网线路</string>
    <string name="scenes_checking_wifi_network_status">正在检查wifi网络状态</string>
    <string name="scenes_optimizing_network_signal">正在优化网络信号</string>
    <string name="scenes_signal_optimizing">信号优化中...</string>
    <string name="scenes_network_acceleration">网络加速</string>
    <string name="scenes_optimize_network_increase_internet_speed">优化网络 提高上网速度</string>
    <string name="scenes_one_key_acceleration">一键加速</string>
    <string name="scenes_the_current_network_speed_is_slow_and_can_be_optimized">当前网速较慢 还可以优化</string>
    <string name="scenes_optimizing_router">正在优化路由器</string>
    <string name="scenes_looking_for_a_premium_internet_connection">正在查找优质上网线路</string>
    <string name="scenes_optimizing_network_security_configuration">正在优化网络安全配置</string>
    <string name="scenes_the_network_is_accelerating">网络加速中...</string>
    <string name="scenes_network_acceleration_more">网络加速%s%%以上</string>
    <string name="scenes_network_needs_to_be_optimized">网络需优化</string>
    <string name="scenes_mobile_phone_antivirus">手机杀毒</string>
    <string name="scenes__never_scanned_for_viruses">从来没有扫描过病毒</string>
    <string name="scenes_detect_immediately">立即检测</string>
    <string name="scenes_antivirus_completed">杀毒完成</string>
    <string name="scenes_the_phone_is_already_safe">手机已经很安全了</string>
    <string name="scenes_tips">提示</string>
    <string name="scenes_tools_unavailable">该功能暂不可用</string>
    <string name="scenes_tools_ok">我知道了</string>
    <string name="scenes_stop">停止</string>
    <string name="scenes_continue">继续</string>
    <string name="scenes_stop_optimized_tips">正在进行优化，您确定要停止优化设备吗？</string>
    <string name="android_r_need_permission">最新安卓系统，需开启文件管理权限</string>
    <string name="excess_garbage_files">垃圾清理</string>
    <string name="video_cache_files">抖音快手清理</string>
    <string name="facebook_cache_files">QQ清理</string>
    <string name="grant">立即开启</string>
    <string name="grant_permission_to_clean">否则将无法清理以下垃圾</string>
    <string name="on_new_page">立即开启，进入新界面后点击底部蓝色按钮</string>
</resources>