<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@drawable/cleanupx_tools_dialog_bg"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scenes_tips"
        android:textSize="30sp"
        android:textColor="#040000"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scenes_tools_unavailable"
        android:textColor="#333333"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/button"
        android:background="@drawable/cleanupx_btn_tools_cancel"
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:text="@string/scenes_tools_ok"/>

</LinearLayout>