<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">


    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@drawable/shape_permission_title"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:text="@string/android_r_need_permission"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="57dp"
            android:layout_height="1dp"
            android:background="@drawable/line_l" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant_permission_to_clean"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="57dp"
            android:layout_height="1dp"
            android:background="@drawable/line_r" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/icon_ll"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/title_ll"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_func_rp_junk_file" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/excess_garbage_files"
                android:textColor="#666666"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_func_video" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/video_cache_files"
                android:textColor="#666666"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_func_facebook" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/facebook_cache_files"
                android:textColor="#666666"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/guide_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_ll"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_button_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_new_page"
            android:textColor="@color/black"
            android:textSize="10sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@id/guide_desc"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_permission_btn"
        android:gravity="center"
        android:text="@string/grant"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/icon_cancel" />

</RelativeLayout>