<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="34dp"
            android:gravity="center"
            android:text="@string/scenes_stop_optimized_tips"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="121dp"
            android:layout_height="39dp"
            android:gravity="center"
            android:layout_marginBottom="17dp"
            android:layout_marginTop="40dp"
            android:text="@string/scenes_stop"
            android:textColor="#999999"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_confirm"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="121dp"
            android:layout_height="39dp"
            android:background="@drawable/scenes_shape_primary_radius_4"
            android:gravity="center"
            android:text="@string/scenes_continue"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cancel"
            app:layout_constraintTop_toTopOf="@+id/tv_cancel"
            tools:background="#ff3e88fa" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
